fixed horizontal scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -266,13 +266,14 @@ fieldset {
 .content__video-card {
   display: flex;
   align-items: start;
+  width: 100%;
   height: 107px;
   padding: 2px;
 }
 
 .content__video-card-description-container {
   flex-grow: 1;
-  width: 200px;
+  width: 194px;
 }
 
 .content__video-card-title {
@@ -282,14 +283,14 @@ fieldset {
   line-height: 1;
   text-transform: uppercase;
   color: #fff;
-  width: 200px;
+  width: 194px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
 .content__video-card-description {
-  max-width: 200px;
+  max-width: 194px;
   margin-top: 6px;
   font-family: "Fira Sans Condensed", "Arial", sans-serif;
   font-weight: 400;
